--- a/screens/css/style.css
+++ b/screens/css/style.css
@@ -15,95 +15,174 @@ body, html {
 .bg-login {
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: url('../assets/plaine.png') no-repeat center center;
+    background: url('../assets/plaine.svg') no-repeat center center;
     background-size: cover;
-    z-index: -1;
-    transform: scale(1.1); /* Évite les bords blancs à cause du flou */
+     /* Évite les bords blancs à cause du flou */
 }
+/* état caché au départ */
+#Classement {
+     position: relative;
+    z-index: 2;
+    
+    opacity: 0;
+    transform: translateX(-100%); /* décalé à gauche */
+    transition: transform 0.2s ease, opacity 0.2s ease;
+    pointer-events: none; /* désactive les clics quand caché */
+}
+
+/* état visible */
+#Classement.show {  
+    opacity: 1;
+    transform: translateX(0); /* revient à sa position normale */
+    pointer-events: auto;
+}
+
+.classement {
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    height: 100vh;  /* hauteur écran */
+    width: auto;    /* largeur auto selon ratio */
+
+    z-index: 2;
+}
+
+.title-classement{
+
+    font-size: 3rem;
+    color: #E2BA63;
+    font-family: "Acme", sans-serif;
+    font-style: normal;
+    position: absolute;
+    z-index: 3; 
+    top: -30px;
+    left: 10%;
+}
+.info {
+    position: absolute;
+    top: 100px;
+    left: 2%;
+    z-index: 3;
+
+    border-collapse: collapse;
+    color: white;
+    font-family: "Acme", sans-serif;
+    font-size: 1rem;
+    width: 35%;
+
+}
+
+.info th,
+.info td {
+    padding: 8px 14px;
+    text-align: center;
+}
+
+.info thead {
+    color: #ffFFFF;
+}
+
+.info tbody tr:nth-child(1) { color: gold; font-weight: bold; }
+.info tbody tr:nth-child(2) { color: silver; }
+.info tbody tr:nth-child(3) { color: #cd7f32; }
+
+
 
 /* Le texte TinyFarm */
 .title {
   position: absolute;
-  top: 80px;              /* ajuste si besoin */
+  top: 40px;              /* ajuste si besoin */
   width: 100%;
   text-align: center;
 
-  font-size: 10rem;
-  color: #e67e22;
-  font-weight: bold;
+  font-size: 9rem;
+  color: #d17037;
+  font-family: "ADLaM Display", system-ui;
+  font-weight: 400;
+  font-style: normal;
 
   z-index: 1;             /* AU-DESSUS du fond */
 }
 
 
+
 /* gauche */
-.side-btn.left {
+#Trophy {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 35%;
+    width: 70px;
+    height: 150px;
+    left: -6px;
+    background: url('../assets/Trophy.svg') no-repeat center center;
+    background-size: contain;
+    border: none;
+    cursor: pointer;
+    z-index: 2;
 
-    width: 90px;
-    height: 200px;
-    background: #e1b85c;
-    border-radius: 16px;   /* 👈 RECTANGLE ARRONDI */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 3rem;
-    opacity: 0.9;
-    left: 20px;
+    /* état initial */
+    transform: translateX(0);
+    transition: transform 0.209s ease;
 }
+#Trophy:hover {
+    background: url('../assets/Trophy.svg') center / contain no-repeat;
+    transform: scale(1.05);
+    filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25));
+}
+
+/* bouton déplacé */
+#Trophy.trophy2 {
+    transform: translateX(550px);
+}
+
+
+
+
 
 /* droite */
 .side-btn.right {
     position: absolute;
-    top: 7.5%;
-    transform: translateY(-50%);
+    top: -10px;
+    right: -2px;
+    background: url('../assets/Settings.svg') no-repeat center center;
+    background-size: contain;
 
-    width: 200px;
-    height: 90px;
-    background: #e1b85c;
-    border-radius: 16px;   /* 👈 RECTANGLE ARRONDI */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 150px;
+    height: 70px;
+       
+    border: none;
+    cursor: pointer;
+     z-index: 3;
 
-    font-size: 3rem;
-    opacity: 0.9;
-    right: 20px;
+}
+.side-btn.right:hover{
+    background: url('../assets/Settings.svg') center / contain no-repeat;
+        transform: scale(1.05);
+  filter: drop-shadow(0 10px 25px rgba(0,0,0,0.25));
 }
 
 
 .login-btn {
-
-    position: absolute;
-    bottom: 150px;        /* 👈 hauteur depuis le bas */
-    left: 50%;           /* 👈 centre horizontal */
+    position: absolute;   /* ou fixed si tu veux */
+    bottom: 80px;
+    left: 50%;
     transform: translateX(-50%);
-    
-    transition: all 0.25s ease;
 
-    padding: 28px 60px;
-    font-size: 3rem;
+    width: 450px;
+    height: 75px;
 
-    background: #e1b85c;
-    color: white;
-
+    background: url('../assets/Login.svg') center / contain no-repeat;
+    background-size: contain;
     border: none;
-    border-radius: 16px;   /* ðŸ‘ˆ COINS ARRONDIS */
+    cursor: pointer;
 
-    display: flex;
-    align-items: center;
-    gap: 12px;
-
-    cursor: default;
-    opacity: 0.95;
+    z-index: 2; /* IMPORTANT */
 }
 .login-btn:hover {
-  background: #f1c96b;              /* un peu plus clair */
+    background: url('../assets/Login.svg') center / contain no-repeat;        /* un peu plus clair */
   transform: translateX(-50%) scale(1.05);
-  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+  filter: drop-shadow(0 10px 25px rgba(0,0,0,0.25));
+
 }
 
 
